# table_rpg_engine

./: .gitignore  CMakeLists.txt  CMakelists.txt
data/: fate_chart.md  scene_adjustment.md
docs/: Roadmap.md
src/: main.c  main.cpp
src/core/: pallocator.c  pallocator.h  parena.c  parray.c  parray.h  pregex.c  pregex.h
src/engine/: engine.hpp
src/grammars/: roll_tables.hpp  roll_tables.l  roll_tables.y  roll_tables_driver.cpp
src_old/: main.cpp
src_old/engine/: engine.cpp
src_old/grammars/: roll_tables.hpp  roll_tables.l  roll_tables.y  roll_tables_driver.cpp  roll_tables_v2.y
tests/: test_framework.c  test_framework.h  test_framework.hpp  test_hello.c  test_hello.cpp  test_main.c  test_main.cpp  test_regex.c
